# Proyecto2-datos2

./: README.md
Codigo/: CMakeLists.txt  main.cpp
Codigo/BMP/: Bmp.cpp  Bmp.h  Image.cpp  Image.h
Codigo/Funcionalidades/: Circulo.cpp  Circulo.h  ColorPixels.cpp  ColorPixels.h  Cuadrado.cpp  Cuadrado.h  Facade_funciones.cpp  Facade_funciones.h  Figuras.cpp  Figuras.h  Filtros.cpp  Filtros.h  Giros.cpp  Giros.h  PaintFill.cpp  PaintFill.h  Seleccion_magica.cpp  Seleccion_magica.h  Zoom.cpp  Zoom.h
Codigo/Interfaz/: Componentes.cpp  Componentes.h  Datos_juego.cpp  Datos_juego.h  Ventana.cpp  Ventana.h
Codigo/lista doblemente enlazada/: LinkedListPixels.cpp  LinkedListPixels.h  ListaEnlazadaPixeles.cpp  ListaEnlazadaPixeles.h  Lista_Doble.cpp  Lista_Doble.h  Lista_doble.cpp  Lista_doble.h  Lista_pixeles.cpp  Lista_pixeles.h  Matriz.cpp  Matriz.h  Nodo.cpp  Nodo.h  Nodo_matriz.cpp  Nodo_matriz.h  Nodo_pixel.cpp  Nodo_pixel.h  QueuePixels.cpp  QueuePixels.h
